<resources>
    <string name="app_name">Calculator</string>
    <string name="c">C</string>
    <string name="left_curly_bracket">(</string>
    <string name="right_curly_bracket">)</string>
    <string name="backspace">\u232B</string>
    <string name="sqr_root">\u221a</string>
    <string name="plus_over_minus">\u00B1</string>
    <string name="divide">\u00F7</string>
    <string name="percentage">\u0025</string>
    <string name="multiply">\u00D7</string>
    <string name="equal">\u003D</string>
    <string name="dot">⋅</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="subtract">-</string>
</resources>