<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:andriod="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resultview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        andriod:layout_constraintBottom_toTopOf="@+id/buttons_group"
        andriod:layout_constraintEnd_toEndOf="parent"
        andriod:layout_constraintHorizontal_bias="0.5"
        andriod:layout_constraintStart_toStartOf="parent"
        andriod:layout_constraintTop_toTopOf="parent"
        andriod:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:height="0dp"
            android:maxHeight="100dp"
            andriod:layout_constraintBottom_toTopOf="@+id/textView2"
            andriod:layout_constraintTop_toTopOf="parent"
            tools:text="23+7" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView2"
            style="@style/ResultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:autofillHints=""
            android:text="100"
            andriod:layout_constraintBottom_toBottomOf="parent"
            andriod:layout_constraintEnd_toEndOf="parent"
            andriod:layout_constraintStart_toStartOf="parent"
            andriod:layout_constraintTop_toTopOf="parent"
            tools:text="30-2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/buttons_group"
        android:layout_width="match_parent"
        android:layout_height="424dp"
        android:orientation="vertical"
        andriod:layout_constraintBottom_toBottomOf="parent"
        andriod:layout_constraintEnd_toEndOf="parent"
        andriod:layout_constraintStart_toStartOf="parent"
        andriod:layout_constraintTop_toTopOf="parent"
        andriod:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/first_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/second_row"
            android:layout_alignParentTop="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.google.android.material.button.MaterialButton
                style="@style/ColorSecondaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/c" />

            <com.google.android.material.button.MaterialButton
                style="@style/ColorSecondaryLightButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/left_curly_bracket" />

            <com.google.android.material.button.MaterialButton
                style="@style/ColorSecondaryLightButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/right_curly_bracket" />

            <com.google.android.material.button.MaterialButton
                style="@style/ColorPrimaryLightButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/multiply" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/third_row"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                style="@style/ColorSecondaryLightButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/sqr_root" />

            <Button
                style="@style/ColorSecondaryLightButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/percentage" />

            <Button
                style="@style/ColorSecondaryLightButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/plus_over_minus" />

            <Button
                style="@style/ColorPrimaryLightButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/divide" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/forth_row"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/seven" />

            <Button
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/eight" />

            <Button
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/nine" />

            <Button
                style="@style/ColorPrimaryLightButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/subtract" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/forth_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/fifth_row"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/four" />

            <Button
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/five" />

            <Button
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/six" />

            <Button
                style="@style/ColorPrimaryLightButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifth_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/six_row"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/one" />

            <Button
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/two" />

            <Button
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/three" />

            <Button
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/backspace" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/six_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/dot" />

            <Button
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/zero" />

            <Button
                style="@style/ColorPrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/equal" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        andriod:barrierDirection="left" />

</androidx.constraintlayout.widget.ConstraintLayout>